# tidb-engine-ext

./: Cargo.toml  Makefile  readme.md
.github/workflows/: ci-test.sh
components/api_version/: Cargo.toml
components/api_version/src/: api_v2.rs  lib.rs
components/batch-system/src/: batch.rs
components/cdc/src/: delegate.rs
components/cloud_encryption/: Cargo.toml
components/cloud_encryption/src/: lib.rs
components/coprocessor_plugin_api/src/: lib.rs
components/engine_panic/src/: write_batch.rs
components/engine_rocks/src/: engine.rs  lib.rs  raw_util.rs  write_batch.rs
components/engine_traits/: Cargo.toml
components/engine_traits/src/: engine.rs  file_system.rs  misc.rs  write_batch.rs
components/file_system/src/: direct.rs  lib.rs
components/gen-proxy-ffi/: Cargo.toml
components/keys/src/: lib.rs
components/kvengine/: Cargo.toml
components/kvengine/src/: apply.rs  compaction.rs  concat_iterator.rs  config.rs  engine.rs  engine_trait.rs  error.rs  flush.rs  lib.rs  meta.rs  metrics.rs  mvcc.rs  options.rs  prepare.rs  read.rs  shard.rs  split.rs  stats.rs  tests.rs  util.rs  write.rs
components/kvengine/src/dfs/: config.rs  metrics.rs  mod.rs  s3.rs
components/kvengine/src/table/: merge_iterator.rs  mod.rs  table.rs  tests.rs
components/kvengine/src/table/blobtable/: blobtable.rs  builder.rs  mod.rs
components/kvengine/src/table/memtable/: arena.rs  cftable.rs  skl.rs
components/kvengine/src/table/sstable/: builder.rs  file.rs  iterator.rs  l0table.rs  sstable.rs
components/kvenginepb/src/: changeset.proto  changeset.rs
components/raft_log_engine/: Cargo.toml
components/raftstore/: Cargo.toml
components/raftstore-proxy/: Cargo.toml
components/raftstore/src/: lib.rs
components/raftstore/src/coprocessor/: dispatcher.rs  mod.rs  region_info_accessor.rs
components/raftstore/src/engine_store_ffi/: mod.rs  read_index_helper.rs
components/raftstore/src/store/: bootstrap.rs  config.rs  mod.rs  peer.rs  peer_storage.rs  snap.rs  util.rs
components/raftstore/src/store/async_io/: write.rs
components/raftstore/src/store/fsm/: apply.rs  mod.rs  peer.rs  store.rs
components/raftstore/src/store/rlog/: mod.rs
components/raftstore/src/store/worker/: pd.rs  raftlog_gc.rs  region.rs
components/resolved_ts/src/: cmd.rs  observer.rs
components/security/: Cargo.toml
components/security/src/: lib.rs
components/server/: Cargo.toml
components/server/src/: core.rs  lib.rs  proxy.rs  server.rs  setup.rs  util.rs
components/sst_importer/src/: import_file.rs  sst_importer.rs
components/test_backup/: Cargo.toml
components/test_backup/src/: lib.rs
components/test_raftstore/src/: cluster.rs  lib.rs  node.rs  server.rs  util.rs
components/test_sst_importer/: Cargo.toml
components/test_storage/: Cargo.toml
components/test_storage/src/: assert_storage.rs  util.rs
components/test_util/: Cargo.toml
components/test_util/src/: security.rs
components/tikv_util/src/: lib.rs
components/txn_types/: Cargo.toml
components/txn_types/src/: lock.rs  write.rs
doc/: new_proxy.md
engine_store_ffi/: Cargo.toml
engine_store_ffi/src/: interfaces.rs  lib.rs  observer.rs
engine_store_ffi/src/core/: common.rs  fast_add_peer.rs
engine_store_ffi/src/core/forward_raft/: command.rs  snapshot.rs
engine_store_ffi/src/ffi/: mod.rs  raftstore_proxy.rs  raftstore_proxy_engine.rs  raftstore_proxy_helper_impls.rs
engine_tiflash/: Cargo.toml
engine_tiflash/src/: engine.rs  lib.rs
engine_tiflash/src/proxy/: mod.rs
engine_tiflash/src/proxy_utils/: mod.rs
engine_tiflash/src/ps_engine/: ps_log_engine.rs
mock-engine-store/: Cargo.toml
mock-engine-store/src/: lib.rs
mock-engine-store/src/mock_cluster/: cluster.rs  cluster_ext.rs  config.rs  mock_oss.rs  mod.rs
mock-engine-store/src/mock_cluster/v1/: cluster.rs  common.rs  node.rs  server.rs  util.rs
mock-engine-store/src/mock_store/: mock_engine_store_server.rs  mock_snapshot_impls.rs
new-mock-engine-store/: Cargo.toml
new-mock-engine-store/src/: mock_store.rs
proxy_components/engine_store_ffi/: Cargo.toml
proxy_components/engine_store_ffi/src/core/: fast_add_peer.rs
proxy_components/engine_store_ffi/src/core/forward_raft/: command.rs
proxy_components/mock-engine-store/src/mock_store/: mock_core.rs
proxy_components/proxy_ffi/src/: interfaces.rs  jemalloc_utils.rs  read_index_helper.rs
proxy_components/proxy_server/src/: common.rs  lib.rs  run.rs
proxy_ffi/: Cargo.toml
proxy_ffi/src/: cloud_helper.rs  domain_impls.rs  engine_store_helper_impls.rs  interfaces.rs  lib.rs  raftstore_proxy.rs  raftstore_proxy_helper_impls.rs  sst_reader_impls.rs  utils.rs
proxy_server/: Cargo.toml
proxy_server/src/: config.rs  proxy.rs  run.rs  setup.rs  status_server.rs  util.rs
proxy_tests/: Cargo.toml
proxy_tests/proxy/: ffi.rs  normal.rs  proxy.rs  region.rs  server_cluster_test.rs
proxy_tests/proxy/shared/: engine.rs
proxy_tests/proxy/utils/: mod.rs
raftstore-proxy/ffi/src/RaftStoreProxyFFI/: @version  ProxyFFI.h
src/: config.rs
src/config/: mod.rs
src/coprocessor/: mod.rs
src/import/: sst_service.rs
src/server/: config.rs  debug.rs  node.rs  raft_client.rs  snap.rs
src/server/lock_manager/: deadlock.rs
src/server/service/: debug.rs
src/server/service/diagnostics/: sys.rs
src/server/status_server/: mod.rs
src/storage/: mod.rs
src/storage/mvcc/: txn.rs
tests/: Cargo.toml
tests/benches/raftstore/: mod.rs
tests/failpoints/cases/: test_bootstrap.rs  test_merge.rs  test_proxy_replica_read.rs  test_sst_recovery.rs
tests/integrations/raftstore/: mod.rs  test_batch_read_index.rs  test_snap.rs  test_split_region.rs
