[package]
name = "mock-engine-store"
version = "0.0.1"
license = "Apache-2.0"
edition = "2018"
publish = false

[lib]
name = "mock_engine_store"

[features]
default = ["protobuf-codec"]
protobuf-codec = [
  "protobuf/bytes",
  "kvproto/protobuf-codec",
]

[dependencies]
api_version = { workspace = true, default-features = false }
assert-type-eq = "0.1.0"
bytes = "1.0"
causal_ts = { workspace = true }
chrono = "0.4"
collections = { workspace = true }
concurrency_manager = { workspace = true, default-features = false }
crossbeam = "0.8"
encryption = { workspace = true, default-features = false }
encryption_export = { workspace = true, default-features = false }
engine_rocks = { workspace = true, default-features = false }
engine_store_ffi = { workspace = true, default-features = false }
engine_test = { workspace = true, default-features = false }
engine_tiflash = { workspace = true, default-features = false }
engine_traits = { workspace = true, default-features = false }
fail = "0.5"
file_system = { workspace = true, default-features = false }
futures = { version = "0.3", features = ["thread-pool", "compat"] }
glob = "0.3"
grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
grpcio-health = { version = "0.10", default-features = false, features = ["protobuf-codec"] }
hyper = "0.14"
int-enum = "0.5"
keys = { workspace = true, default-features = false }
kvengine = { workspace = true }
kvproto = { workspace = true, default-features = false }

lazy_static = "1.3"
log_wrappers = { workspace = true }
pd_client = { workspace = true, default-features = false }
protobuf = "2.8.0"
proxy_server = { workspace = true }
quick-xml = { version = "0.23.1", features = ["serialize"] }
raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
raftstore = { workspace = true, default-features = false }
rand = "0.8"
regex = "1.3"
resolved_ts = { workspace = true }

resource_control = { workspace = true }
resource_metering = { workspace = true }
security = { workspace = true, default-features = false }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
tempfile = "3.0"
test_pd_client = { workspace = true }
test_raftstore = { workspace = true }
test_util = { workspace = true, default-features = false }
tikv = { workspace = true, default-features = false }
tikv_util = { workspace = true, default-features = false }
tokio = { version = "1.5", features = ["rt-multi-thread"] }
tokio-timer = { git = "https://github.com/tikv/tokio", branch = "tokio-timer-hotfix" }
tokio-util = "0.7"
txn_types = { workspace = true, default-features = false }
url = "2"
