[package]
name = "security"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
aws = { workspace = true }
base64 = "0.13"
cloud = { workspace = true }
cloud_encryption = { workspace = true }
collections = { workspace = true }
encryption = { workspace = true }
grpcio = { workspace = true }
kvproto = { workspace = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tikv_util = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
